--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -641,6 +641,9 @@ nav:
 
   - Guides:
     - Guides/README.md
+    - RSDKv2:
+      - Decompilation:
+        - Building: Guides/RSDKv2/Decompilation/Building.md
     - RSDKv3:
       - Decompilation:
         - Building: Guides/RSDKv3/Decompilation/Building.md
