--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -644,6 +644,7 @@ nav:
     - RSDKv2:
       - Decompilation:
         - Building: Guides/RSDKv2/Decompilation/Building.md
+        - Setup: Guides/RSDKv2/Decompilation/Setup.md
     - RSDKv3:
       - Decompilation:
         - Building: Guides/RSDKv3/Decompilation/Building.md
