Add the Building and Setup Guide for RSDKv2 Decompilation (and the images) (#9)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -641,6 +641,10 @@ nav:
 
   - Guides:
     - Guides/README.md
+    - RSDKv2:
+      - Decompilation:
+        - Building: Guides/RSDKv2/Decompilation/Building.md
+        - Setup: Guides/RSDKv2/Decompilation/Setup.md
     - RSDKv3:
       - Decompilation:
         - Building: Guides/RSDKv3/Decompilation/Building.md
