Preliminary Zensical changes
Images are broken due to link validation not being supported yet.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ edit_uri: edit/master/docs/
 copyright: Not affiliated with Evening Star or SEGA
 theme:
   name: material
+  variant: classic
   custom_dir: overrides
   logo: assets/icon.png
   favicon: assets/icon.png
